# voronoi-nexus

./: .gitignore  COMMIT_MESSAGE.md  CONTRIBUTING.md  README.md  pyproject.toml  setup-digimon-1_2.sh
.github/workflows/: ci.yml  release.yml
corporate/: block7_advanced_threats_conversion.md  manifest.yaml  release_batches.yaml
corporate/affine_replica/: README.md  pyproject.toml
corporate/delaunay_sentinel/: README.md  pyproject.toml
corporate/elliptic_proof/: README.md  pyproject.toml
corporate/fractal_axiom/: README.md  pyproject.toml
corporate/fractal_identity/: README.md  pyproject.toml
corporate/fractal_identity/docs/: INSTALLATION.md
corporate/fractal_mask/: README.md  pyproject.toml
corporate/fractal_report/: pyproject.toml
corporate/fractal_sso/: README.md  pyproject.toml
corporate/fractal_veil/: README.md  pyproject.toml
corporate/geodesic_cipher/: README.md  pyproject.toml
corporate/geodesic_directory/: README.md  pyproject.toml
corporate/geodesic_identity/: README.md  pyproject.toml
corporate/geodesic_ledger/: README.md  pyproject.toml
corporate/geodesic_network/: CHANGELOG.md  README.md  pyproject.toml
corporate/geodesic_pursuit/: README.md  pyproject.toml
corporate/geodesic_session/: README.md  pyproject.toml
corporate/geodesic_strategy/: pyproject.toml
corporate/geodesic_strategy/docs/: INSTALLATION.md
corporate/hausdorff_match/: README.md  pyproject.toml
corporate/hausdorff_match/docs/: API.md  ARCHITECTURE.md  INSTALLATION.md  PRESENTACION_CORPORATIVA.md  USAGE.md
corporate/hausdorff_match/examples/: README.md  basic_usage.py
corporate/hausdorff_match/src/hausdorff_match/: __init__.py  core.py  models.py
corporate/hausdorff_match/tests/: conftest.py  test_core.py
corporate/helix_biometric/: README.md  pyproject.toml
corporate/helix_filter/: CHANGELOG.md  README.md  pyproject.toml
corporate/helix_incident/: CHANGELOG.md  README.md  pyproject.toml
corporate/helix_notify/: pyproject.toml
corporate/helix_notify/docs/: INSTALLATION.md
corporate/helix_standard/: README.md  pyproject.toml
corporate/helix_trace/: CHANGELOG.md  README.md  pyproject.toml
corporate/helix_vault/: README.md  pyproject.toml
corporate/helly_rules/: README.md  pyproject.toml
corporate/hyperplane_bridge/: pyproject.toml
corporate/hyperplane_bridge/docs/: INSTALLATION.md
corporate/hyperplane_crawl/: README.md  pyproject.toml
corporate/hyperplane_guard/: README.md  pyproject.toml
corporate/kuratowski_forge/: README.md  pyproject.toml
corporate/lattice_permission/: README.md  pyproject.toml
corporate/lattice_policy/: CHANGELOG.md  README.md  pyproject.toml
corporate/lattice_resource/: README.md  pyproject.toml
corporate/lattice_tactic/: pyproject.toml
corporate/lattice_tactic/docs/: INSTALLATION.md
corporate/lemniscate_anon/: README.md  pyproject.toml
corporate/lemniscate_archive/: README.md  pyproject.toml
corporate/lemniscate_compliance/: pyproject.toml
corporate/lemniscate_compliance/docs/: INSTALLATION.md
corporate/lemniscate_horizon/: README.md  pyproject.toml
corporate/lemniscate_mnemo/: CHANGELOG.md  README.md  pyproject.toml
corporate/lemniscate_oauth/: README.md  pyproject.toml
corporate/lemniscate_right/: README.md  pyproject.toml
corporate/manifold_code/: README.md  pyproject.toml
corporate/manifold_conductor/: pyproject.toml
corporate/manifold_fuzz/: CHANGELOG.md  README.md  pyproject.toml
corporate/minkowski_unpack/: README.md  pyproject.toml
corporate/persistent_nerve/: README.md  pyproject.toml
corporate/polyhedron_core/: pyproject.toml
corporate/polyhedron_core/docs/: INSTALLATION.md
corporate/polytope_cluster/: README.md  pyproject.toml
corporate/polytope_detonate/: README.md  pyproject.toml
corporate/polytope_dlp/: README.md  pyproject.toml
corporate/polytope_metrics/: pyproject.toml
corporate/polytope_metrics/docs/: INSTALLATION.md
corporate/polytope_privilege/: README.md  pyproject.toml
corporate/radon_veilbreak/: README.md  pyproject.toml
corporate/simplex_cipher/: CHANGELOG.md  README.md  pyproject.toml
corporate/simplex_container/: README.md  pyproject.toml
corporate/simplex_pass/: README.md  pyproject.toml
corporate/simplex_secret/: CHANGELOG.md  README.md  pyproject.toml
corporate/simplicial_swarm/: README.md  pyproject.toml
corporate/simplicial_swarm/docs/: API.md  ARCHITECTURE.md  INSTALLATION.md  PRESENTACION_CORPORATIVA.md  USAGE.md
corporate/simplicial_swarm/examples/: README.md  basic_usage.py
corporate/simplicial_swarm/src/simplicial_swarm/: __init__.py  core.py  models.py
corporate/simplicial_swarm/tests/: conftest.py  test_core.py
corporate/tesseract_beacon/: pyproject.toml
corporate/tesseract_beacon/docs/: INSTALLATION.md
corporate/torus_audit/: pyproject.toml
corporate/torus_audit/docs/: INSTALLATION.md
corporate/vertex_hook/: pyproject.toml
corporate/vertex_hook/docs/: INSTALLATION.md
corporate/voronoi_reclaim/: README.md  pyproject.toml
corporate/voronoi_reclaim/docs/: API.md  ARCHITECTURE.md  INSTALLATION.md  PRESENTACION_CORPORATIVA.md  USAGE.md
corporate/voronoi_reclaim/examples/: README.md  basic_usage.py
corporate/voronoi_reclaim/src/voronoi_reclaim/: __init__.py  core.py  models.py
corporate/voronoi_reclaim/tests/: conftest.py  test_core.py
digimons/gdprmon/: pyproject.toml
digimons/gdprmon/src/gdprmon/: __init__.py  core.py  models.py
digimons/gdprmon/tests/: conftest.py  test_core.py
docs/: EPIC_INFRA_POSTURE.md  INFRA_POSTURE.md
examples/: integrated_pipeline.py
shared/: __init__.py  pipeline.py
snocomm/: __init__.py  __main__.py  cli.py  loader.py  manifest.py  paths.py  posture.py  posture_defaults.py  runner.py
tests/: test_cli.py  test_integration.py
tools/: build_executable.py  corporate_presentation_content.yaml  ensure_module_readmes.py  generate_block5_assets.py  generate_block7_assets.py  generate_block8_assets.py  generate_docs.py  package_release_batch.py  refactor_modules.py  setup-digimon-1_2.sh  test_all_digimons.sh  test_all_modules.py
(+494 files in other folders)
