[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snocomm-security-suite"
version = "1.0.0"
description = "Snocomm Security Suite — monorepo holding for 51 cybersecurity modules"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Kirtan Teg Singh", email = "security@snocomm.dev"}]
requires-python = ">=3.10"
keywords = ["cybersecurity", "snocomm", "security-suite", "monorepo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=7.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
    "isort>=5.12.0",
]

[project.urls]
Homepage = "https://github.com/snocomm-security/snocomm-security-suite"
Documentation = "https://snocomm-security-suite.readthedocs.io"
Repository = "https://github.com/snocomm-security/snocomm-security-suite"
Issues = "https://github.com/snocomm-security/snocomm-security-suite/issues"

[tool.setuptools.packages.find]
include = ["shared*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
