[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "hyperplane_bridge"
version = "3.0.0"
description = "Integra APIs de terceros con controles de seguridad y resiliencia operativa. (Production)"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Kirtan Teg Singh", email = "security@snocomm.dev"}]
requires-python = ">=3.10"
keywords = ["cybersecurity", "snocomm", "api-integrator", "hyperplane_bridge"]
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-cov>=4.1.0", "black>=23.0.0", "flake8>=6.0.0", "mypy>=1.4.0", "isort>=5.12.0"]

[project.urls]
Homepage = "https://github.com/Andrei-Barwood/voronoi-nexus"
Repository = "https://github.com/Andrei-Barwood/voronoi-nexus/tree/main/corporate/hyperplane_bridge"

[tool.poetry]
packages = [{include = "hyperplane_bridge", from = "src"}]
